--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel": "^5.5.4",
     "babel-eslint": "^3.1.14",
+    "chai": "^3.0.0",
     "coffee-script": "^1.9.3",
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.5.0",
@@ -28,6 +29,8 @@
     "gulp-eslint": "^0.13.2",
     "jsdom": "^5.4.3",
     "mocha-gwt": "^0.1.13",
-    "mockery": "^1.4.0"
+    "mockery": "^1.4.0",
+    "sinon": "^1.15.1",
+    "sinon-chai": "^2.8.0"
   }
 }
