--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "offcourse-component-breadcrumbs",
-  "version": "0.1.0",
-  "description": "A react component for breadcrumbs",
+  "version": "0.0.1",
+  "description": "A react component for the offcourse breadcrumbs",
   "main": "lib/index.js",
   "scripts": {
     "build": "gulp build",
@@ -16,17 +16,19 @@
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.1.2",
-    "offcourse-component-breadcrumb": "0.1.0",
+    "offcourse-component-level-button": "0.0.4",
     "ramda": "^0.14.0",
     "react": "^0.13.3"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^1.2.0",
     "babel": "^5.5.4",
     "babel-core": "^5.5.6",
     "babel-eslint": "^3.1.14",
     "babel-loader": "^5.1.4",
     "chai": "^3.0.0",
     "coffee-script": "^1.9.3",
+    "css-loader": "^0.9.1",
     "eslint": "^0.22.1",
     "eslint-loader": "^0.12.0",
     "eslint-plugin-react": "^2.5.0",
@@ -38,9 +40,12 @@
     "mockery": "^1.4.0",
     "node-libs-browser": "^0.5.2",
     "node-static": "^0.7.6",
+    "offcourse-styles": "0.0.4",
     "react-hot-loader": "^1.2.7",
     "sinon": "^1.15.1",
     "sinon-chai": "^2.8.0",
+    "style-loader": "^0.8.3",
+    "url-loader": "^0.5.5",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
   }
